fix android build

--- a/.gitmodules
+++ b/.gitmodules
@@ -15,4 +15,4 @@
 	url = git@github.com:oktal/result.git
 [submodule "library/dependencies/ffmpeg"]
 	path = library/dependencies/ffmpeg
-	url = git://source.ffmpeg.org/ffmpeg.git
+url=https://github.com/sandstranger/FFmpeg.git
